--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "@reduxjs/toolkit": "^1.6.1",
+    "axios": "^0.21.1",
     "carbox-date-picker": "^0.2.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "next": "10.2.3",
+    "next-redux-wrapper": "^7.0.2",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-day-picker": "^7.4.10",
@@ -20,6 +24,13 @@
     "react-redux": "^7.2.4",
     "react-slick": "^0.28.1",
     "redux": "^4.1.0",
-    "slick-carousel": "^1.8.1"
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
+    "slick-carousel": "^1.8.1",
+    "store-js": "^2.0.4"
+  },
+  "devDependencies": {
+    "redux-devtools-extension": "^2.13.9"
   }
 }
