--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.11.2",
+    "@prisma/client": "^3.5.0",
     "@reduxjs/toolkit": "^1.6.1",
     "axios": "^0.21.1",
     "carbox-date-picker": "^0.2.0",
@@ -36,6 +37,7 @@
     "webpack": "^5.60.0"
   },
   "devDependencies": {
+    "prisma": "^3.5.0",
     "redux-devtools-extension": "^2.13.9"
   }
 }
