--- a/package.json
+++ b/package.json
@@ -24,15 +24,14 @@
     "react-day-picker": "^7.4.10",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.4",
-    "react-slick": "^0.28.1",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-reset": "^0.3.0",
     "redux-thunk": "^2.3.0",
-    "slick-carousel": "^1.8.1",
     "store-js": "^2.0.4",
+    "swiper": "^6.8.4",
     "url-loader": "^4.1.1",
     "webpack": "^5.60.0"
   },
