--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "redux-persist": "^6.0.0",
     "redux-reset": "^0.3.0",
     "redux-thunk": "^2.3.0",
+    "sass": "^1.58.0",
     "slick-carousel": "^1.8.1",
     "store-js": "^2.0.4",
     "watch": "^1.0.2"
