--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^1.6.1",
     "axios": "^0.21.1",
     "carbox-date-picker": "^0.2.0",
+    "file-loader": "^6.2.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "next": "10.2.3",
@@ -33,6 +34,7 @@
     "sass": "^1.58.0",
     "slick-carousel": "^1.8.1",
     "store-js": "^2.0.4",
+    "url-loader": "^4.1.1",
     "watch": "^1.0.2"
   },
   "devDependencies": {
